FIX (Long form gallery) Fix css
Z-index was causing an overlap of the stick-nav.

--- a/src/patterns/long-form/_long-form.scss
+++ b/src/patterns/long-form/_long-form.scss
@@ -21,7 +21,7 @@
 
     // Positioning
     position: relative; // A hook for other absolute positioning inside
-    z-index: 1000;
+    z-index: 0;
 }
 
 
